data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1283.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\9f\80\80\80\00\01\0e\65\78\74\65\72\6e"
    "\61\6c\4d\6f\64\75\6c\65\0c\65\78\74\65\72\6e\61"
    "\6c\46\75\6e\63\00\00\03\82\80\80\80\00\01\00\0a"
    "\94\80\80\80\00\01\8e\80\80\80\00\00\02\40\41\01"
    "\04\40\0c\01\0b\10\00\0b\0b"
  )
""
)